syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "Carro";

package br.com.zup.edu;

import "google/protobuf/timestamp.proto";

service CarroService {
  rpc send (CarroRequest) returns (CarroReply) {}
}

message CarroRequest {
  string modelo = 1;
  string placa = 2;
  int32 ano = 3;
  Proprietario proprietario = 4;
  Combustivel combustivel = 5;
}

message CarroReply {
  int64 id = 1;
  google.protobuf.Timestamp dataCriacao = 2;
}
message Proprietario {
  string nome = 1;
  string cpf = 2;
}
enum Combustivel{
  GASOLINA = 0;
  ALCOOL = 1;
  FLEX = 2;
}