syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "FuncionarioMessageOuterClass";


package protobuff.br.com.zup;

import "google/protobuf/timestamp.proto";

service EduService {
  rpc send (FuncionarioRequest) returns (FuncionarioResponse) {}
}
enum Cargo{
  DEV = 0;
  QA = 1;
  GERENTE = 2;
}
message Endereco{
  string logradouro = 1;
  string bairro = 2;
  string complemento = 3;
}
message FuncionarioRequest {
  string name = 1;
  int32 idade = 2;
  Cargo cargo = 3;
  string cpf = 4;
  double salario = 5;
  bool ativo = 6;
  repeated Endereco enderecos = 7;
}

message FuncionarioResponse {
  string name = 1;
  google.protobuf.Timestamp criadoEm = 2;
}